# Souls-of-Stockholm-Django

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
souls_of_stockholm/: admin.py  asgi.py  forms.py  manifest.json  mixins.py  services.py  settings.py  urls.py  views.py  wsgi.py
souls_of_stockholm/api/: serializers.py  urls.py  views.py
souls_of_stockholm/forums/: urls.py  views.py
souls_of_stockholm/posts/: forms.py  models.py  services.py  urls.py  views.py
souls_of_stockholm/posts/migrations/: 0001_initial.py  0002_tag_posts_tag.py  0003_rename_user_posts_author.py  0004_alter_posts_tag.py
souls_of_stockholm/posts/migrations/fixtures/: fixture.json
souls_of_stockholm/static/css/: main_page.css  user.css
souls_of_stockholm/static/js/: manifest.json  service-worker.js
souls_of_stockholm/templates/: footer.html  index.html  login.html  navigation.html
souls_of_stockholm/templates/forum/: index.html
souls_of_stockholm/templates/posts/: create.html  delete.html  post.html  update.html
souls_of_stockholm/templates/user/: delete.html  profile.html  register.html  update.html
souls_of_stockholm/user/: forms.py  jwt.py  models.py  services.py  urls.py  validator.py  views.py
souls_of_stockholm/user/migrations/: 0001_initial.py
static/css/: main_page.css  post.css  user.css
